--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,24 @@
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-    <div id="footer">
-      <span>dddddd</span>
+    <div class="footer">
+      <div class="container"><ul><li><a href="/" class="">
+        O Nas
+      </a></li><li><!----></li><li><a href="/" class="">
+        Regulamin
+      </a></li></ul> <ul><li><!----></li><li><a href="/" class="">
+        Polityka Prywatności
+      </a></li><li><!----></li></ul> <ul><li><a href="/" class="">
+      Kontakt
+      </a></li> <li><a href="/" class="">
+        FAQ
+      </a></li> <li><a href="/" class="nuxt-link-active">
+        Strona Główna
+      </a></li> <li><a href="/" class="nuxt-link-active">
+        Rejestracja
+      </a></li> <li><a href="/" class="nuxt-link-active">
+        Logowanie
+      </a></li></ul></div>
     </div>
     <!-- built files will be auto injected -->
   </body>
